# Eklavya---Drone

./: Blog.md  CMakeLists.txt  README.md  package.xml
Drone URDF/Drone/: CMakeLists.txt  package.xml
Drone URDF/Drone/config/: drone_control.yaml  joint_names_Drone.yaml
Drone URDF/Drone/launch/: display.launch  gazebo.launch
Drone URDF/Drone/meshes/: base_link.dae  wing_link1.STL  wing_link2.STL  wing_link2.dae  wing_link3.STL  wing_link4.STL
Drone URDF/Drone/src/: takeoff.py
Drone URDF/Drone/urdf/: .~lock.drone.csv#  Drone.csv  Drone.urdf  drone.csv  drone.urdf
Drone URDF/drone/: CMakeLists.txt  package.xml
Drone URDF/drone/config/: joint_names_Drone.yaml
Drone URDF/drone/include/drone/: gazebo_edrone_propulsion.h  gazebo_ros_gps.h
Drone URDF/drone/meshes/: wing_link1.STL  wing_link2.STL  wing_link3.STL
Drone URDF/drone/urdf/: drone.csv  drone.urdf
Drone URDF/vitarana_drone/: CMakeLists.txt  README.md  package.xml
Drone URDF/vitarana_drone/cfg/: SensorModel.cfg
Drone URDF/vitarana_drone/include/vitarana_drone/: update_timer.h
Drone URDF/vitarana_drone/launch/: box.launch  drone.launch  task_2.launch  task_3.launch  task_4.launch  task_5.launch
Drone URDF/vitarana_drone/models/city/: model.config  model.sdf
Drone URDF/vitarana_drone/models/city/meshes/: city.mtl
Drone URDF/vitarana_drone/models/delivery/: model.config  model.sdf
Drone URDF/vitarana_drone/models/delivery/meshes/: delivery.mtl
Drone URDF/vitarana_drone/models/edrone/: model.sdf
Drone URDF/vitarana_drone/models/landing_station/: model.config  model.sdf
Drone URDF/vitarana_drone/models/landing_station/meshes/: marker.mtl
Drone URDF/vitarana_drone/models/parcel_box/: model.config  model.sdf
Drone URDF/vitarana_drone/models/parcel_box/meshes/: parcel_box.mtl
Drone URDF/vitarana_drone/models/returns/: model.config  model.sdf
Drone URDF/vitarana_drone/models/returns/meshes/: returns.mtl
Drone URDF/vitarana_drone/models/sector/: model.config  model.sdf
Drone URDF/vitarana_drone/models/sector/meshes/: sector.mtl
Drone URDF/vitarana_drone/msg/: MarkerData.msg  edrone_cmd.msg  prop_speed.msg
Drone URDF/vitarana_drone/scripts/: control.py  gripper_service.py  manifest.csv  pid.py  qr_detect.py  read_sensor_data.py
Drone URDF/vitarana_drone/srv/: Gripper.srv
Drone URDF/vitarana_drone/worlds/: box.world  boxstatic.world  city.world  citystatic.world  sector.world  sector_task_3.world  sector_task_3static.world  sector_task_4.world  sector_task_4static.world  sectorstatic.world  task.world
assets/: Untitled Diagram.drawio
cfg/: GNSS.cfg
drone/cfg/: config_gripper.yaml
drone/config/: GNSS.cfg  SensorModel.cfg  config_gripper.yaml  joint_names_Drone.yaml
drone/include/drone/: sensor_model.h
drone/launch/: gazebo.launch
drone/meshes/: base_link.STL
drone/src/: gazebo_drone_propulsion.cpp  gazebo_ros_gps.cpp  move.py
drone/urdf/: drone.urdf
include/vitarana_drone/: gazebo_edrone_propulsion.h  gazebo_ros_gps.h  sensor_model.h
models/edrone/: model.config
models/edrone/meshes/: edrone.mtl  prop.dae  prop_ccw.dae
scripts/: control.py  pid.py  takeoff.py
src/: gazebo_edrone_propulsion.cpp  gazebo_ros_gps.cpp
worlds/: drone.world  dronestatic.world
