<package format="2">
  <name>drone</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for drone</p>
    <p>This package contains configuration data, 3D models and launch files
for drone robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>


   	
  <export>
    <architecture_independent />
  </export>
</package>
